Fixed bug with the toggle menu icon on small screen.

--- a/front-end/angular-ecommerce-front/src/app/components/navbar/navbar.component.css
+++ b/front-end/angular-ecommerce-front/src/app/components/navbar/navbar.component.css
@@ -110,7 +110,9 @@ header {
     }
 
     .menu-toggle {
-        transform: translateX(-30px);
+        transform: translateX(-15px);
+        width: 30px;
+        z-index: 15;
         position: absolute;
         display: block;
         font-size: 1.5em;
